@@ -1,3 +1,10 @@
+2009-01-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* t/PangoLayout.t
+	* xs/PangoLayout.xs: Allow passing undef to
+	Gtk2::Pango::Layout::set_attributes().  Patch by Emmanuel
+	Rodriguez.  (RT #42079)
+
 2008-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* t/PangoLayout.t: Fix a skip count.  Patch by Kevin Ryde.
